--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
         "monochromeImage": "./assets/images/SLfinalLogo.png"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "package": "com.jraay12.Smartleaf"
     },
     "web": {
       "output": "static",
@@ -46,6 +47,12 @@
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "7a573a58-c50a-4f7c-a9cd-34cfbf1c2b87"
+      }
     }
   }
 }
